# kahani-backend

./: .envrc  .gitignore  README.md  api.py  main.py  pyproject.toml
modules/metadata/: service.py
modules/persona/: service.py
modules/script/: service.py
modules/storyline/: service.py
modules/transaction/: dto.py  service.py
modules/user/: service.py
modules/voice/: service.py
routers/: auth.py  clerk_webhook.py  persona.py  root.py  script.py  story.py  storyline.py  transactions.py  user.py  voice.py
routers/dtos/: auth.py  story.py  storyline.py
shared/: auth_middleware.py  database.py  discord_webhook.py  ffmpeg.py  jwt_utils.py  language_codes.py  logging_config.py  pagination.py  queries.py  seed.py  utils.py
shared/llm/: gemini.py  sarvam.py  sarvam_tts.py
shared/models/: __init__.py  story.py  transaction.py  user.py
tests/: merge_audio.py  metadata.py
