[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
]
