[project]
name = "kahani"
version = "0.9.0"
description = "Kahani is a multi-agentic system for creating immersive audio-only stories based on user prompts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
    "bcrypt>=4.3.0",
]
